#1 Distribuir las propiedades cuando se genera runnable para no depender del fuente.

--- a/SistInfGenWeb_4.0_src/build.xml
+++ b/SistInfGenWeb_4.0_src/build.xml
@@ -105,6 +105,9 @@
 		</copy>
 		<!-- Copia los LEEME.txt y licencia de la aplicación -->
 		<copy file="${rsc.main.dir}/LEEME.TXT" todir="${run.dir}" />
+		
+		<!-- Copia las propiedades de la aplicación para ejecución -->
+		<copy file="${src.main.dir}/config.properties" todir="${run.dir}" />
 
 		<!-- Copia los archivos de recursos web de la aplicación -->
 		<copy todir="${run.rsc.web}/css">
@@ -175,3 +178,4 @@
 	</target>
 
 </project>
+
